--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
-    "@tanstack/react-query": "5.45.1",
+    "@tanstack/react-query": "^5.90.12",
     "@tokamak-network/thanos-sdk": "^0.0.14",
     "ethers": "^5.7.2",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
-    "next": "15.4.8",
+    "next": "15.5.9",
     "next-runtime-env": "^3.2.2",
     "next-themes": "^0.4.3",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
@@ -29,15 +29,15 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.10",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "@wagmi/cli": "latest",
     "bufferutil": "^4.0.8",
     "encoding": "^0.1.13",
     "eslint": "^8.41.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.5.9",
     "eslint-config-typescript": "^3.0.0",
     "lokijs": "^1.5.12",
     "pino-pretty": "^10.3.1",
